2006-08-11  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_cpu_caps_prk.h, src/arch/i386/x86_cpu_caps_prk.c:
	add SSE4 detection

2006-08-05  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec.in: We need aRts packages for a complete build.

2006-08-04  Prakash Punnoor <prakash@punnoor.de>

	* Makefile.am: add new CMake modules to distribution

2006-08-04  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Synched files to distribute with reality.

2006-08-03  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerMMXFlag.cmake: added

	* CMakeLists.txt: try to enable MMX by setting compile flag; error out
	on not finding NASM

2006-08-02  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerVisibility.cmake: use CMake module
	
	* admin/CMakeModules/FindOpenALBackends.cmake: added
	
	* CMakeLists.txt: factor out backends detection macro

2006-08-01  Sven Panne  <sven.panne@aedion.de>

	* src/al_filter.c: Avoid a (wrong) warning when using Visual C.

2006-07-31  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/al_siteconfig.h: Cleaned up snprintf detection
	logic.

	* src/al_siteconfig.h, src/alc/alc_context.c: To avoid portability
	issues, use a home-grown case-insensitve string comparison function.

	* src/al_siteconfig.h: Cleaned up #ifdefs for sized integer types.

	* src/al_siteconfig.h: Nuked ancient Darwin stuff.

	* config-osx.h: Removed.

	* src/backends/alc_backend_wave.c: If needed, open WAVE file in binary
	mode.

2006-07-31  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: add -W flags only for GCC compatible compilers, check
	for more headers, don't build static lib by default, don't work-around
	nasm visibility detection anymore (requires cmake >=2.4), add checks
	for snprintf and __int8
	
	* src/al_siteconfig.h: some Windows fixes
	
	* src/backends/alc_backend_wave.c, src/alc/alc_context.c: check for
	non-standard headers
	