@@ -3,7 +3,7 @@ SET(CMAKE_ASM_COMPILER_ARG1 "@CMAKE_ASM_COMPILER_ARG1@")
 SET(CMAKE_ASM_COMPILER_LOADED 1)
 SET(CMAKE_ASM_COMPILER_ENV_VAR "ASM_COMPILER")
 
-SET(CMAKE_ASM_SOURCE_FILE_EXTENSIONS nasm;asm;nas)
+SET(CMAKE_ASM_SOURCE_FILE_EXTENSIONS yasm;nasm;asm;nas)
 SET(CMAKE_ASM_IGNORE_EXTENSIONS h;H;o;O;obj;OBJ;def;DEF;rc;RC)
 SET(CMAKE_ASM_LINKER_PREFERENCE None)
 IF(UNIX)
