@@ -1,9 +1,20 @@
 IF(NOT CMAKE_ASM_COMPILE_OBJECT)
   IF(UNIX)
-    SET(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> -f elf <FLAGS> -o <OBJECT> <SOURCE>")
+    # Assume x86 if no detection is done
+    SET(CMAKE_ASM_COMPILER_ARG1 "-f elf")
+
+    IF(CMAKE_UNAME)
+      EXEC_PROGRAM(uname ARGS -m OUTPUT_VARIABLE CMAKE_SYSTEM_MACHINE)
+      IF(CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
+        SET(CMAKE_ASM_COMPILER_ARG1 "-f elf64")
+      ENDIF(CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
+    ENDIF(CMAKE_UNAME)
   ELSE(UNIX)
-    SET(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> -f win32 -DWIN32 <FLAGS>  -o <OBJECT> <SOURCE>")
+# FIXME
+    SET(CMAKE_ASM_COMPILER_ARG1 "-f win32 -DWIN32")
   ENDIF(UNIX)
+
+  SET(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> <FLAGS> -o <OBJECT> <SOURCE>")
 ENDIF(NOT CMAKE_ASM_COMPILE_OBJECT)
 
 IF(NOT CMAKE_ASM_LINK_EXECUTABLE)
