@@ -1,5 +1,5 @@
 IF(NOT CMAKE_ASM_COMPILER)
-  FIND_PROGRAM(CMAKE_ASM_COMPILER NAMES nasm )
+  FIND_PROGRAM(CMAKE_ASM_COMPILER NAMES yasm nasm)
 ENDIF(NOT CMAKE_ASM_COMPILER)
 MARK_AS_ADVANCED(CMAKE_ASM_COMPILER)
 
